fix firefox animation flicker; fix transitionend event bubbling from image; immediately remove hover from card when clicked

--- a/src/components/Deck/TarotCard/index.css
+++ b/src/components/Deck/TarotCard/index.css
@@ -3,23 +3,30 @@
   cursor: pointer;
   user-select: none;
   flex: 1;
-
-  &.selected {
-    z-index: 10;
-  }
+  z-index: 1;
 
   img {
     width: 100%;
     transition: transform 0.4s ease;
   }
-  &:hover {
-    img {
-      transform: translateY(-10px);
+
+  @media (hover: hover) {
+    &:hover {
+      img {
+        transform: translateY(-10px);
+      }
     }
   }
+
   &.animating {
+    pointer-events: none;
+
     img {
       transform: translateZ(0);
     }
+  }
+
+  &.selected {
+    z-index: 10;
   }
 }
